fix: style overflow

--- a/src/pages/Teams/team.css
+++ b/src/pages/Teams/team.css
@@ -21,7 +21,7 @@
   .border:hover {
     border: 1px solid #fff;
   }
-  .card {
+  .team_card {
     height: 379px;
     width: 300px;
     background: #808080;
